--- a/index.html
+++ b/index.html
@@ -3,9 +3,208 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toto Lai</title>
+    <title>Portfolio | lai.codes</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+        body { font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
+        .gradient-text { background: linear-gradient(90deg, #3b82f6, #2563eb); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        .card-hover:hover { transform: translateY(-5px); transition: all 0.3s ease; }
+    </style>
 </head>
-<body>
-    <h1>hello world</h1>
+<body class="bg-slate-50 text-slate-900 selection:bg-blue-100">
+
+    <!-- Navbar -->
+    <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-slate-200">
+        <div class="max-w-5xl mx-auto px-6 h-16 flex items-center justify-between">
+            <span class="text-xl font-bold gradient-text">lai.codes</span>
+            <div class="hidden md:flex space-x-8 text-sm font-medium text-slate-600">
+                <a href="#projects" class="hover:text-blue-600">Projects</a>
+                <a href="#certs" class="hover:text-blue-600">Certifications</a>
+                <a href="#skills" class="hover:text-blue-600">Skills</a>
+                <a href="mailto:tototofu0601@gmail.com" class="px-4 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition">Contact</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <header class="max-w-5xl mx-auto px-6 pt-24 pb-16 text-center">
+        <div class="inline-block px-4 py-1.5 mb-6 text-sm font-semibold text-blue-700 bg-blue-50 rounded-full border border-blue-100">
+            HKUST CompEng & AI '27
+        </div>
+        <h1 class="text-5xl md:text-7xl font-bold tracking-tight mb-6">Building the future with <span class="gradient-text">Agentic AI</span></h1>
+        <p class="text-xl text-slate-600 max-w-2xl mx-auto mb-10 leading-relaxed">
+            National Climbing Team athlete turned Engineer. Exploring the intersection of Robotics, Generative AI, and human performance.
+        </p>
+        <div class="flex justify-center space-x-4">
+            <a href="https://github.com/tototofu123" class="p-3 bg-white border border-slate-200 rounded-xl hover:shadow-lg transition">
+                <i class="fab fa-github text-2xl"></i>
+            </a>
+            <a href="#" class="p-3 bg-white border border-slate-200 rounded-xl hover:shadow-lg transition">
+                <i class="fab fa-linkedin text-2xl"></i>
+            </a>
+            <a href="mailto:tototofu0601@gmail.com" class="p-3 bg-white border border-slate-200 rounded-xl hover:shadow-lg transition">
+                <i class="fas fa-envelope text-2xl"></i>
+            </a>
+        </div>
+    </header>
+
+    <!-- Project Gallery -->
+    <section id="projects" class="max-w-5xl mx-auto px-6 py-16">
+        <div class="flex items-center justify-between mb-12">
+            <h2 class="text-3xl font-bold">Technical Projects</h2>
+            <div class="h-px bg-slate-200 flex-grow ml-8 hidden md:block"></div>
+        </div>
+        
+        <div class="grid md:grid-cols-2 gap-8">
+            <!-- Project 1 -->
+            <div class="bg-white p-8 rounded-3xl border border-slate-200 card-hover shadow-sm">
+                <div class="w-12 h-12 bg-blue-100 rounded-2xl flex items-center justify-center text-blue-600 mb-6 text-xl">
+                    <i class="fas fa-robot"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">All-in-One Combat Bot</h3>
+                <p class="text-slate-600 mb-4 text-sm leading-relaxed">
+                    Lead engineer for a 4-man team. Developed a high-performance combat robot with BLE mobile control via Arduino. 
+                    <strong>Secured 1st Place overall</strong> among 20+ teams.
+                </p>
+                <div class="flex flex-wrap gap-2">
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">Arduino IDE</span>
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">C++</span>
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">Robotics</span>
+                </div>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="bg-white p-8 rounded-3xl border border-slate-200 card-hover shadow-sm">
+                <div class="w-12 h-12 bg-purple-100 rounded-2xl flex items-center justify-center text-purple-600 mb-6 text-xl">
+                    <i class="fas fa-brain"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">Agentic Hot-Topic Automation</h3>
+                <p class="text-slate-600 mb-4 text-sm leading-relaxed">
+                    Multi-stage autonomous agent deployed via Docker. Integrated Ollama for local LLM processing and PostgreSQL for trend storage. Reduced manual research time by 90%.
+                </p>
+                <div class="flex flex-wrap gap-2">
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">n8n</span>
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">Ollama</span>
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">PostgreSQL</span>
+                </div>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="bg-white p-8 rounded-3xl border border-slate-200 card-hover shadow-sm">
+                <div class="w-12 h-12 bg-green-100 rounded-2xl flex items-center justify-center text-green-600 mb-6 text-xl">
+                    <i class="fas fa-terminal"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">C++ PvE Combat Engine</h3>
+                <p class="text-slate-600 mb-4 text-sm leading-relaxed">
+                    Hand-coded terminal-based RPG using OOP principles. Features modular inventory, dynamic enemy scaling, and state-machine logic for turn-based combat.
+                </p>
+                <div class="flex flex-wrap gap-2">
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">C++</span>
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">OOP</span>
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">Gamedev</span>
+                </div>
+            </div>
+
+            <!-- Project 4 -->
+            <div class="bg-white p-8 rounded-3xl border border-slate-200 card-hover shadow-sm">
+                <div class="w-12 h-12 bg-orange-100 rounded-2xl flex items-center justify-center text-orange-600 mb-6 text-xl">
+                    <i class="fas fa-draw-polygon"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">Python Turtle Vector Renderer</h3>
+                <p class="text-slate-600 mb-4 text-sm leading-relaxed">
+                    Custom interpreter for Python Turtle. Maps 500+ path nodes to render complex geometric shapes and characters with computational geometry optimizations.
+                </p>
+                <div class="flex flex-wrap gap-2">
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">Python</span>
+                    <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-semibold rounded-md">Geometry</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section id="certs" class="bg-white py-16">
+        <div class="max-w-5xl mx-auto px-6">
+            <h2 class="text-3xl font-bold mb-12">Certifications</h2>
+            <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="p-5 border border-slate-100 rounded-2xl hover:border-blue-200 transition">
+                    <p class="text-xs font-bold text-blue-600 uppercase mb-2">Vanderbilt</p>
+                    <p class="font-semibold text-slate-800">Agentic AI with Python</p>
+                </div>
+                <div class="p-5 border border-slate-100 rounded-2xl hover:border-blue-200 transition">
+                    <p class="text-xs font-bold text-blue-600 uppercase mb-2">AWS</p>
+                    <p class="font-semibold text-slate-800">Machine Learning Foundations</p>
+                </div>
+                <div class="p-5 border border-slate-100 rounded-2xl hover:border-blue-200 transition">
+                    <p class="text-xs font-bold text-blue-600 uppercase mb-2">U. Michigan</p>
+                    <p class="font-semibold text-slate-800">Interactivity with JavaScript</p>
+                </div>
+                <div class="p-5 border border-slate-100 rounded-2xl hover:border-blue-200 transition">
+                    <p class="text-xs font-bold text-blue-600 uppercase mb-2">Imperial College</p>
+                    <p class="font-semibold text-slate-800">Creative Thinking & AI</p>
+                </div>
+                <div class="p-5 border border-slate-100 rounded-2xl hover:border-blue-200 transition">
+                    <p class="text-xs font-bold text-blue-600 uppercase mb-2">Copenhagen BS</p>
+                    <p class="font-semibold text-slate-800">Illusion of Intelligence</p>
+                </div>
+                <div class="p-5 border border-slate-100 rounded-2xl hover:border-blue-200 transition">
+                    <p class="text-xs font-bold text-blue-600 uppercase mb-2">DEC x HKUST</p>
+                    <p class="font-semibold text-slate-800">AI Literacy for All</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="max-w-5xl mx-auto px-6 py-20">
+        <div class="bg-slate-900 rounded-[3rem] p-12 text-white">
+            <h2 class="text-3xl font-bold mb-10 text-center">Technical Stack</h2>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-12">
+                <div>
+                    <h4 class="text-blue-400 font-bold mb-4">Core</h4>
+                    <ul class="space-y-2 text-slate-400 text-sm">
+                        <li>Python</li>
+                        <li>C++</li>
+                        <li>JavaScript</li>
+                        <li>PostgreSQL</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-blue-400 font-bold mb-4">AI / Agents</h4>
+                    <ul class="space-y-2 text-slate-400 text-sm">
+                        <li>RAG & MCP</li>
+                        <li>Dify & n8n</li>
+                        <li>TensorFlow</li>
+                        <li>Ollama</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-blue-400 font-bold mb-4">Workflows</h4>
+                    <ul class="space-y-2 text-slate-400 text-sm">
+                        <li>Docker</li>
+                        <li>GitHub CI/CD</li>
+                        <li>Figma/Framer</li>
+                        <li>Arduino IDE</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-blue-400 font-bold mb-4">Athletics</h4>
+                    <ul class="space-y-2 text-slate-400 text-sm">
+                        <li>National Climbing Team</li>
+                        <li>Technical Coaching</li>
+                        <li>Event Strategy</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="text-center py-12 text-slate-400 text-sm">
+        <p>&copy; 2026 lai.codes. Coded by hand with AI-augmented workflows.</p>
+    </footer>
+
 </body>
 </html>
